<resources>
    <string name="app_name">Mocatag</string>
    <string name="username_field_hint">نام و نام خانوادگی</string>
    <string name="password_field_hint">رمز ورود</string>
    <string name="re_password_field_hint">تایید رمز ورود</string>
    <string name="phone_number_field_hint">شماره تلفن</string>
    <string name="email_field_hint">آدرس ایمیل</string>
    <string name="sign_up_btn">ثبت نام</string>
    <string name="sign_in_btn">ورود</string>
    <string name="already_signed_text">قبلا ثبت نام کرده اید؟</string>
    <string name="didnot_signed_text">هنوز ثبت نام نکرده اید؟</string>
    <string name="enter">ورود</string>
    <string name="sign_up_with_google_btn">ثبت نام از طریق گوگل</string>
    <string name="sign_in_with_google_btn">ورود از طریق گوگل</string>
    <string name="classification_btn">دسته بندی</string>
    <string name="cooperation_name_field">نام</string>
    <string name="cooperation_family_field"> نام خانوادگی</string>
    <string name="cooperation_email_field">ایمیل</string>
    <string name="cooperation_phone_field">شماره تماس</string>
    <string name="cooperation_center_name_field">نام مرکز</string>
    <string name="cooperation_description_field">توضیحات</string>
    <string name="cooperation_text">درخواست همکاری</string>
    <string name="send">ارسال</string>
    <string name="sign_up_email">ایمیل</string>
    <string name="confirm">تایید</string>
    <string name="cancel">لغو</string>
    <string name="educational">آموزشی</string>
    <string name="cloth">پوشاک</string>
    <string name="health">سلامتی و پزشکی</string>
    <string name="cafe">کافی شاپ</string>
    <string name="restaurant">رستوران و کافی شاپ</string>
    <string name="culture">فرهنگی</string>
    <string name="services">خدمات</string>
    <string name="amusement">تفریحی و ورزشی</string>
    <string name="makeups">زیبایی و آرایشی</string>
    <string name="more_options">موارد دیگر</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="HottestOffs">تخفیف های داغ</string>
    <string name="title_classification">دسته بندی</string>
    <string name="title_my_codes">کد های من</string>
    <string name="title_nearest_offs">تخفیف های اطراف من</string>
    <string name="title_home">خانه</string>
    <string name="address">همدان، ساختمان زاگرس، واحد 2</string>
    <string name="phone_number">081-3335555</string>
    <string name="email">info@mocatag.ir</string>
    <string name="social_network">شبکه های اجتماعی</string>
    <string name="cooperation_request">درخواست همکاری</string>
    <string name="notif">اعلانات</string>
    <string name="shop_information">اطلاعات</string>
    <string name="mocatag_description">  وب‌سایتی است که آخرین و بهترین تخفیف‌های رستوران‌ها،‌ مراکز
 ورزشی،‌ مراکز تفریحی،‌ فروشگاه‌ها،‌ هتل‌ها و غیره را تا ۹۰٪ تخفیف
ارائه می‌دهد</string>
    <string name="I_Did_Not_Get_Tag">من یونیکاف را خریده‌ام اما کد کوپن را دریافت نکرده‌ام</string>
    <string name="How_To_Use">من کد کوپن را دریافت کرده‌ام،‌ چگونه آن را استفاده کنم؟</string>
    <string name="cannot_use">من کد کوپن را دریافت کرده‌ام،‌ اما نمی‌توانم  استفاده کنم</string>

    <string-array name="cities">
        <item>
            <string name="hamedan">همدان</string>
        </item>
        <item>
            <string name="malayer">ملایر</string>
        </item>
        <item>
            <string name="nahavand">نهاوند</string>
        </item>
        <item>
            <string name="asadabad">اسد آباد</string>
        </item>
        <item>
            <string name="arak">اراک</string>
        </item>

        <item>
            <string name="tuyserkan">تویسرکان</string>
        </item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_test_navigation_drawer">Mocatag</string>
    <string name="title_activity_test">Test</string>
    <string name="shop_location">مکان روی نقشه</string>
    <string name="shop_offs">تخفیفات</string>
    <string name="what_is_mocatag">موکاتک چیست ؟</string>
    <string name="IWantToRegisterACenter">درخواست ثبت مرکز را دارم</string>
    <string name="IWantToWorkAsAVisitor">می خواهم بعنوان بازاریاب با شما همکاری کنم</string>
    <string name="IWantToGetHired">می خواهم در یونیکاف استخدام شوم</string>
    <string name="shop_is_closed">فروشگاه هم اکنون بسته می باشد</string>
    <string name="notify_me_on_new_offs">در صورت ارائه تخفیف به من اطلاع بده</string>
    <string name="save_in_gallery">ذخیره در گالری</string>
    <string name="allright">بسیار خب</string>
    <string name="show_me_code">مشاهده کد</string>
    <string name="todays_offs">تخفیف های امروز</string>
    <string name="price_with_off">قیمت با تخفیف:</string>
    <string name="bought_count">تعداد خریداری شده</string>
    <string name="remain_days">مهلت خرید</string>
    <string name="use_date">مهلت استفاده</string>
    <string name="bookmark">نشان کردن</string>
    <string name="postpic">عکس صفحه پست</string>
    <string name="percentage">%</string>
    <string name="toman">تومان</string>
    <string name="AreYouWantToLogOut">آیا قصد خروج از حساب کاریری خود را دارید ؟</string>
    <string name="Yes">بله</string>
    <string name="No">خیر</string>
    <string name="classifications">دسته بندی ها</string>
    <string name="seeShopPAge">مشاهده صفحه فروشگاه</string>
    <string name="apply_changes">ثبت تغییرات</string>
    <string name="today_tags">تگ های روز</string>
    <string name="tours">تور و سفر</string>
    <string name="arts">هنر</string>
    <string name="apply_filter">اعمال فیلتر</string>
    <string name="networkstatustextview">networkstatustextview</string>
    <string name="networkstatus_disconnected">ارتباط شما با اینترنت قطع است</string>
    <string name="retry">تلاش مجدد</string>
    <string name="info_circle">info_circle</string>
    <string name="information">اطلاعات</string>
    <string name="attributes">ویژگی ها</string>
    <string name="clipboard_list">clipboard_list</string>
    <string name="qrcode">کد</string>
    <integer name="google_play_services_version">12451000</integer>


</resources>
