<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CheckNetworkConnection">

    <RelativeLayout
        android:layout_marginTop="60dp"
        android:layout_marginBottom="60dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/networkStatusiv"
            android:contentDescription="@string/networkstatustextview"
            android:src="@drawable/ic_wifi"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_marginTop="10dp"
            android:text="@string/networkstatus_disconnected"
            android:id="@+id/networkstatustv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/networkStatusiv"/>

        <Button
            android:id="@+id/check_connection_btn"
            android:layout_marginTop="20dp"
            android:text="@string/retry"
            style="?attr/borderlessButtonStyle"
            android:background="@drawable/sendbtnstyle"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/networkstatustv"
            android:layout_centerHorizontal="true"/>


    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>