<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".SignUpActivity">

    <ImageView
        android:id="@+id/sign_up_profile_pic"
        android:layout_width="80dp"
        android:layout_height="86dp"
        android:background="@drawable/ic_user"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/sign_up_back_btn"
        android:layout_width="18dp"
        android:layout_height="22dp"
        android:background="@drawable/ic_arrow_left"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.061"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="360dp"
        android:layout_height="317dp"
        android:elevation="5dp"
        android:background="@drawable/shadow"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.387">

        <EditText
            android:id="@+id/sign_up_username"
            android:layout_width="330dp"
            android:layout_height="56dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="8dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/username_field_hint"
            android:inputType="text"
            android:textSize="21sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/sign_up_phone"
            android:layout_width="330dp"
            android:layout_height="56dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:gravity="end"
            android:textSize="21sp"
            android:hint="@string/phone_number_field_hint"
            android:inputType="phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_up_username" />

        <EditText
            android:id="@+id/password"
            android:layout_width="330dp"
            android:layout_height="56dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:gravity="right"

            android:textSize="21sp"
            android:hint="@string/password_field_hint"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_up_email" />

        <EditText
            android:id="@+id/re_password"
            android:layout_width="330dp"
            android:layout_height="56dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:gravity="right"
            android:textSize="21sp"
            android:hint="@string/re_password_field_hint"
            android:inputType="textPassword"
            android:textDirection="anyRtl"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.531"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sign_up_email"
            android:layout_width="330dp"
            android:layout_height="56dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:gravity="right"
            android:textSize="21sp"
            android:hint="@string/email_field_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_up_phone" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/sign_up_btn"
        android:layout_width="285dp"
        android:layout_height="46dp"
        android:background="@drawable/sign_up_btn_style"
        android:text="@string/sign_up_btn"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.084" />

    <TextView
        android:id="@+id/already_signed_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/already_signed_text"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.964"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_btn" />

    <TextView
        android:id="@+id/enter"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="132dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/enter"
        android:textColor="@color/blue"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/already_signed_text_view"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_btn" />

    <Button
        android:id="@+id/sign_up_wih_google"
        android:layout_width="285dp"
        android:layout_height="46dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:textSize="22sp"
        android:gravity="right"
        android:paddingEnd="20dp"
        android:paddingTop="4sp"
        android:background="@drawable/signupwithgoogle"
        android:text="@string/sign_up_with_google_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter" />


</androidx.constraintlayout.widget.ConstraintLayout>